force-app/main/default/objects/Deal_Approval_History__c/Deal_Approval_History__c.object-meta.xml
<CustomObject>
    <description>Audit trail for DealGuard approval submissions and decisions.</description>
    <label>Deal Approval History</label>
    <nameField>
        <displayFormat>DAH-{0000}</displayFormat>
        <label>Approval History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Approval Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>