force-app/main/default/objects/Deal_Approval_History__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Submitted</fullName><default>true</default><label>Submitted</label></value>
            <value><fullName>Auto Approved</fullName><default>false</default><label>Auto Approved</label></value>
            <value><fullName>Routed</fullName><default>false</default><label>Routed</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>