force-app/main/default/objects/Deal_Approval_History__c/fields/Actor_Role__c.field-meta.xml
<CustomField>
    <fullName>Actor_Role__c</fullName>
    <label>Actor Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>