force-app/main/default/objects/Deal_Approval_History__c/fields/Deal_Request__c.field-meta.xml
<CustomField>
    <fullName>Deal_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Request</label>
    <referenceTo>Deal_Request__c</referenceTo>
    <relationshipLabel>Approval History</relationshipLabel>
    <relationshipName>Approval_History</relationshipName>
    <type>Lookup</type>
</CustomField>